Fixed background color

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 body  {
-    background-color: E9EBEE;
+    background-color: #E9EBEE;
     font-family:'open sans',arial,sans-serif;
     margin: 0;
 }
