--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,9 @@
         <a href="/projects.html">\\\&nbsp;Projects</a>
         <a style="float: right" href="https://ko-fi.com/robertnickel">\\\&nbsp;☕</a>
     </div>
-    {{ content }}
+    <div style="margin-top: 3em">
+        {{ content }}
+    </div>
     <br><br>
     <div class="footer">
         <a class="profile-comment" href="impressum.html">Impressum</a> ||
