extracted article-box (which really doesnt fit as name any more) into default page-

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,11 @@
         <a href="/projects.html">\\\&nbsp;Projects</a>
         <a style="float: right" href="https://ko-fi.com/robertnickel">\\\&nbsp;☕</a>
     </div>
-    {{ content }}
+
+    <div class="article-box">
+        <br><br>
+        {{ content }}
+    </div>
     <br><br>
     <div class="footer">
         <a class="profile-comment" href="impressum.html">Impressum</a> ||
