--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="Agile Software Engineering from the perspective of an Agile Advocate, Software Engineer and Things Doer.">
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 
 <body>
