Introduced content class (to replace article box on the long term.)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,7 @@
         <a style="float: right" href="https://ko-fi.com/robertnickel">\\\&nbsp;☕</a>
     </div>
 
-    <div class="article-box">
-        <br><br>
+    <div class="content">
         {{ content }}
     </div>
     <br><br>
