--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
 <h1 class="title">
     {{ page.title }}
 </h1>
-<p class="signature">{{ page.signature }}</p>
+<p class="signature">By Robert Nickel - {{ page.date | date: '%B %d, %Y' }}</p>
 <p class="text">
     {{ content }}
 </p>
