--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="header">
-        <a href="/index.html">\\\&nbsp;Hooome</a>
+        <a href="/index.html">\\\&nbsp;Home</a>
         <a href="/blog.html">\\\&nbsp;Blog</a>
         <a href="/profile.html">\\\&nbsp;Profile</a>
         <a href="/projects.html">\\\&nbsp;Projects</a>
