--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,3 +1,12 @@
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    <title>Software Experiences by Robert Nickel</title>
+    <meta name="description"
+        content="Agile Software Engineering from the perspective of an Agile Advocate, Software Engineer and Things Doer.">
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="/styles.css">
+</head>
+
 <p class="heading">
     {{ page.heading }}
 </p>
