--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,12 +7,17 @@
     <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 
-<p class="heading">
-    {{ page.heading }}
-</p>
-<h1 class="title">
-    {{ page.title }}
-</h1>
-<p class="signature">By Robert Nickel - {{ page.date | date: '%B %d, %Y' }}</p>
+<div class="content">
+    <p class="heading">
+        {{ page.heading }}
+    </p>
+    <h1 class="title">
+        {{ page.title }}
+    </h1>
+    <p class="signature">By Robert Nickel - {{ page.date | date: '%B %d, %Y' }}</p>
 
-{{ content }}
+    {{ content }}
+    <br>
+    <hr>
+    <br>
+</div>
