--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 
+
 <div class="content">
+
     <p class="heading">
         {{ page.heading }}
     </p>
@@ -18,5 +20,7 @@
 
     {{ content }}
     <br>
+    <p>Category: {{ page.categories | join: ', ' }} </p>
+
     <hr>
 </div>
