--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@
     <h1 class="title">
         <a href="{{page.url}}"> {{ page.title }}</a>
     </h1>
-    <p class="signature">Robert Nickel - {{ page.date | date: '%B %d, %Y' }} - 🏷️ {{ page.categories | join: ', ' }}
+    <p class="signature">Robert Nickel - {{ page.date | date: '%B %d, %Y' }}    🏷️ {{ page.categories | join: ', ' }}
     </p>
 
     {{ content }}
