Added category pages.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,14 +2,7 @@
 
 <html lang="en">
 
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <title>Software Experiences by Robert Nickel</title>
-    <meta name="description"
-        content="Agile Software Engineering from the perspective of an Agile Advocate, Software Engineer and Things Doer.">
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="/styles.css">
-</head>
+{% include head.html %}
 
 <body>
     <div class="header">
@@ -25,8 +18,8 @@
     </div>
     <br><br>
     <div class="footer">
-        <a class="profile-comment" href="impressum.html">Impressum</a> ||
-        <a class="profile-comment" href="dsgvo.html">Data Protection</a>
+        <a style="font-size: small" href="impressum.html">Impressum</a> ||
+        <a style="font-size: small" href="dsgvo.html">Data Protection</a>
     </div>
 </body>
 
