--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 }
 
 body  {
+    font-size: .9em;
     background-color: #E9EBEE;
     font-family:'open sans',arial,sans-serif;
     margin: 0;
@@ -14,7 +15,6 @@ body  {
 p {
     line-height: 200%;
     display: block;
-    font-size: .9em;
 }
 
 a {
@@ -30,17 +30,42 @@ ul {
 }
 
 li {
-    font-size: .9em;
     line-height: 200%;
 }
 
 td {
     padding-right: 2em;
-    font-size: .9em;
 }
 
 b {
     font-weight: 1000
+}
+
+h1, h2 {
+    text-transform: uppercase;
+    text-align: center;
+
+}
+
+h1 {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-bottom: 0;
+}
+
+h1 a {
+    text-decoration: none;
+}
+
+h2 {
+    background-color: black;
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    color: white;
+    font-size: small;
 }
 
 .header {
@@ -58,39 +83,11 @@ b {
     color: white;
     text-decoration: none;
     padding-right: 3em;
-    font-size: .9em;
-}
-
-.heading {
-    background-color: black;
-    width: 200px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    color: white;
-    font-size: small;
-}
-
-.title {
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-
-.title a {
-    text-decoration: none;
 }
 
 .signature {
     color: #c3c3c3;
     font-size: small;
-}
-
-.heading,
-.title,
-.signature {
     text-transform: uppercase;
     text-align: center;
 }
@@ -110,10 +107,6 @@ b {
     width: 33%;
 }
 
-.profile-comment {
-    font-size: small;
-}
-
 .full-circle {
     background: black;
     width: 8px;
@@ -126,10 +119,6 @@ b {
     width: 8px;
     height: 8px;
     border-radius: 50%;
-}
-
-.skill {
-    font-size: medium;
 }
 
 .content {
@@ -151,4 +140,11 @@ b {
     background: black;
     padding: 0.5em;
     font-size: .9em;
+}
+
+.top-right-link {
+    font-size: .8em;
+    float:right;
+    margin-right: 1em;
+    margin-top: 3em;
 }
