--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,23 +1,18 @@
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <title>Software Experiences by Robert Nickel</title>
-    <meta name="description"
-        content="Agile Software Engineering from the perspective of an Agile Advocate, Software Engineer and Things Doer.">
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="/styles.css">
-</head>
-
+{% include head.html %}
 
 <div class="content">
 
-    <p class="heading">
-        {{ page.heading }}
-    </p>
-    <h1 class="title">
+    <h2>{{ page.heading }}</h2>
+    <h1>
         <a href="{{page.url}}"> {{ page.title }}</a>
     </h1>
-    <p class="signature">Robert Nickel - {{ page.date | date: '%B %d, %Y' }}&emsp;&emsp;🏷️&nbsp;{{ page.categories | join: ', ' }}
-    </p>
+    <div style="margin-top: .5em" class="signature">Robert Nickel - {{ page.date | date: '%B %d, %Y' }}&emsp;&emsp;🏷️&nbsp;
+        {% for category in page.categories %}
+        <a class="signature" style="text-decoration: none;"
+            href="{{ site.url }}/category/{{ category | slugify }}/index.html">{{ category}}</a>
+            {% if forloop.last == false %}|{% endif %}
+        {% endfor %}
+    </div><br>
     {{ content }}
     <br>
     <hr>
