--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,12 +1,13 @@
 <div class="about mb-8 md:mb-16 relative z-20">
-  <h2 class="font-bold text-xl pb-3 mb-3 border-b" data-sal="slide-up" data-sal-duration="800">
-    <span class="text-{{site.data.settings.color-scheme}}">About</span> Me
+  <h2 class="font-bold text-xl pb-3 mb-3 border-b" data-sal="slide-up" data-sal-duration="500">
+    <span class="text-{{site.data.settings.color-scheme}}">Welcome</span>
   </h2>
 
-  <p data-sal="slide-up" data-sal-duration="800">
+  <p data-sal="slide-up" data-sal-duration="500">
     {{ site.data.about.about-text }}
   </p>
-  <div class="details mt-3 md:mt-6" data-sal="slide-up" data-sal-duration="800">
+  <br>
+  <div class="details mt-3 md:mt-6" data-sal="slide-up" data-sal-duration="500">
     <ul>
       {% for item in site.data.about.details %} 
       <li class="mb-3 text-right">
