--- a/_includes/hire-me.html
+++ b/_includes/hire-me.html
@@ -1,15 +1,9 @@
 <div class="hire mb-8 md:mb-16">
-  <h2
-    class="font-bold text-xl pb-3 mb-3 border-b"
-    data-sal="slide-up"
-    data-sal-duration="800"
-  >
-    <span class="text-{{site.data.settings.color-scheme}}">Hire</span> Me
-  </h2>
+  <h2 class="font-bold text-xl pb-3 mb-3 border-b" data-sal="slide-up" data-sal-duration="500"></h2>
 
-  <a
-    class="grid bg-green-500 rounded px-4 py-3 text-center text-white font-bold hover:bg-green-400"
-    href="/contact/"
-    >Hire Me</a
-  >
+  <p class="mt-6 mb-6" data-sal="slide-up" data-sal-duration="500">
+    {{ site.data.about.contact-text }}
+  </p>
+  <a class="grid bg-gray-700 rounded px-4 py-3 text-center text-white font-bold hover:bg-gray-600"
+    href="/contact/">Contact Me</a>
 </div>
