--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,14 +1,9 @@
 <aside
-  class="sidebar md:sticky col-span-12 md:col-span-4 shadow-lg rounded-lg bg-{{site.data.settings.color-scheme}} p-4 md:p-8"
->
-  <a href="{{'/' | relative_url }}"
-    ><div class="image grid justify-items-center py-3 md:py-5 border-b">
-      <img
-        src="/assets/images/onepx.png"
-        class="lazy w-24 h-24 rounded-full shadow border-4 border-white"
-        data-src="{{site.data.sidebar.image}}"
-        alt="{{site.data.sidebar.name}}"
-      />
+  class="sidebar md:sticky col-span-12 md:col-span-4 shadow-lg rounded-lg bg-{{site.data.settings.color-scheme}} p-4 md:p-8">
+  <a href="{{'/' | relative_url }}">
+    <div class="image grid justify-items-center py-3 md:py-5 border-b">
+      <img src="/assets/images/onepx.png" class="lazy w-24 h-24 rounded-full shadow border-4 border-white"
+        data-src="{{site.data.sidebar.image}}" alt="{{site.data.sidebar.name}}" />
     </div>
   </a>
   <div class="description grid justify-items-center py-3 md:py-5">
@@ -22,11 +17,8 @@
       <ul class="flex justify-around mb-3 md:mb-5">
         {% for item in site.data.sidebar.social %}
         <li>
-          <a href="{{item.link}}" title="{{item.title}}"
-            ><i
-              class="fab {{item.icon}} text-3xl md:text-2xl  text-white hover:text-gray-300 transform duration-200"
-            ></i
-          ></a>
+          <a href="{{item.link}}" title="{{item.title}}"><i
+              class="fab {{item.icon}} text-3xl md:text-2xl  text-white hover:text-gray-300 transform duration-200"></i></a>
         </li>
         {% endfor %}
       </ul>
@@ -35,9 +27,7 @@
       <ul class="flex justify-around pb-3 md:pb-5 text-white">
         {% for item in site.data.sidebar.sidebar-links %}
         <li>
-          <a href="{{item.link}}" class="text-sm hover:underline"
-            >{{item.title}}</a
-          >
+          <a href="{{item.link}}" class="text-sm hover:underline">{{item.title}}</a>
         </li>
         {% unless forloop.last %}
         <li class="font-light px-1">|</li>
