--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,56 +1,24 @@
 <div class="works mb-8 md:mb-16">
-  <h2
-    class="font-bold text-xl pb-3 mb-3 border-b"
-    data-sal="slide-up"
-    data-sal-duration="800"
-  >
-    My <span class="text-blue-500">Skills</span>
+  <h2 class="font-bold text-xl pb-3 mb-3 border-b" data-sal="slide-up" data-sal-duration="500">
+    <span class="text-{{site.data.settings.color-scheme}}">Skills</span>
   </h2>
   <div class="grid grid-cols-2 md:grid-cols-3 gap-4 py-3 items-center">
     {% for item in site.data.skills %}
-    <div class="svg-item" data-sal="slide-up" data-sal-duration="800">
+    <div class="svg-item" data-sal="slide-up" data-sal-duration="500">
       <svg width="100%" height="100%" viewBox="0 0 40 40" class="donut">
-        <circle
-          class="donut-hole"
-          cx="20"
-          cy="20"
-          r="15.91549430918954"
-          fill="#fff"
-        ></circle>
-        <circle
-          class="donut-ring"
-          cx="20"
-          cy="20"
-          r="15.91549430918954"
-          fill="transparent"
-          stroke-width="3.5"
-        ></circle>
-        <circle
-          class="{{item.color}} stroke-current donut-segment donut-segment-{{forloop.index}}"
-          cx="20"
-          cy="20"
-          r="15.91549430918954"
-          fill="transparent"
-          stroke-width="3.5"
-          stroke-dasharray="{{item.skillLevel}} {{100 | minus: item.skillLevel}}"
-          stroke-dashoffset="25"
-        ></circle>
+        <circle class="donut-hole" cx="20" cy="20" r="15.91549430918954" fill="#fff"></circle>
+        <circle class="donut-ring" cx="20" cy="20" r="15.91549430918954" fill="transparent" stroke-width="3.5"></circle>
+        <circle class="{{item.color}} stroke-current donut-segment donut-segment-{{forloop.index}}" cx="20" cy="20"
+          r="15.91549430918954" fill="transparent" stroke-width="3.5"
+          stroke-dasharray="{{item.skillLevel}} {{100 | minus: item.skillLevel}}" stroke-dashoffset="25"></circle>
         <g class="fill-current">
           <text y="50%" transform="translate(0, 2)">
-            <tspan
-              x="50%"
-              text-anchor="middle"
-              class="{{item.color}} donut-percent"
-            >
+            <tspan x="50%" text-anchor="middle" class="{{item.color}} donut-percent">
               {{item.skillLevel}}%
             </tspan>
           </text>
           <text y="60%" transform="translate(0, 2)">
-            <tspan
-              x="50%"
-              text-anchor="middle"
-              class="text-gray-800 font-light donut-data"
-            >
+            <tspan x="50%" text-anchor="middle" class="text-gray-800 font-light donut-data">
               {{item.name}}
             </tspan>
           </text>
@@ -59,25 +27,58 @@
     </div>
 
     <style>
-      .donut-segment-{{forloop.index}} {
-        animation: donut{{forloop.index}} 4s;
+      .donut-segment- {
+          {
+          forloop.index
+        }
+      }
+
+        {
+        animation: donut {
+            {
+            forloop.index
+          }
+        }
+
+        4s;
       }
 
       @keyframes donutfadelong {
         0% {
           opacity: 0;
         }
+
         100% {
           opacity: 1;
         }
       }
 
-      @keyframes donut{{forloop.index}} {
+      @keyframes donut {
+          {
+          forloop.index
+        }
+      }
+
+        {
         0% {
           stroke-dasharray: 0, 100;
         }
+
         100% {
-          stroke-dasharray: {{item.skillLevel}},  {{100 | minus: item.skillLevel}};
+          stroke-dasharray: {
+              {
+              item.skillLevel
+            }
+          }
+
+          ,
+            {
+              {
+              100 | minus: item.skillLevel
+            }
+          }
+
+          ;
         }
       }
     </style>
@@ -110,6 +111,7 @@
         0% {
           opacity: 0.2;
         }
+
         100% {
           opacity: 1;
         }
