--- a/src/custom.css
+++ b/src/custom.css
@@ -78,6 +78,10 @@ h6 {
   @apply list-decimal ml-6;
   @apply text-gray-700;
 }
+.post,
+.page {
+  @apply leading-relaxed
+}
 code.highlighter-rouge {
   @apply bg-gray-600 px-2 py-1 my-1 rounded text-white;
 }
