Feed link below blog.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,8 +21,11 @@ layout: default
         <div class="post">{{content}}</div>
         <div class="text-center">
           <hr><br>
+          Like? 
           <a href="https://ko-fi.com/robertnickel">
-            Like? Buy me a coffee.. ☕</a>
+            Buy me a coffee</a> and
+            <a href="/feed.xml">follow RSS Feed.</a> 🧔‍
+
         </div>
         <!--<div class="border-t py-5">{% include disqus.html %}</div>-->
       </main>
