--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -8,7 +8,7 @@ p, h1, h2, h3, h4, h5, h6 {
   color: rgba(55, 65, 81, var(--tw-text-opacity));
 }
 
-.post a {
+.post a, .page a {
   text-decoration: underline;
 }
 
