--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
 <aside
-  class="sidebar md:sticky col-span-12 md:col-span-4 shadow-lg rounded-lg bg-{{site.data.settings.color-scheme}} p-4 md:p-8">
+  class="sidebar md:sticky col-span-12 md:col-span-4 shadow-lg rounded-lg bg-{{site.data.settings.color-scheme}} p-4 md:p-8 h-12">
   <a href="{{'/' | relative_url }}">
     <div class="image grid justify-items-center py-3 md:py-5 border-b">
       <img src="/assets/images/onepx.png" class="lazy w-24 h-24 rounded-full shadow border-4 border-white"
