--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,6 @@
 <div class="about mb-8 md:mb-16 relative z-20">
   <h2 class="font-bold text-xl pb-3 mb-3 border-b" data-sal="slide-up" data-sal-duration="500">
-    <span class="text-{{site.data.settings.color-scheme}}">Welcome</span>
+    <span class="text-{{site.data.settings.color-scheme}}">About me</span>
   </h2>
 
   <p data-sal="slide-up" data-sal-duration="500">
