--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,7 +4,7 @@
     data-sal="slide-up"
     data-sal-duration="500"
   >
-    My <span class="text-{{site.data.settings.color-scheme}}">Services</span>
+    What I can offer
   </h2>
   <div class="grid md:grid-cols-2 grid-cols-1 gap-4 mb-3 md:mb-5">
     {% for item in site.data.services %}
