--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,4 +10,5 @@
   {% include google-fonts.html %}
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}" />
   {% include analytics.html %}
+  <script src="https://kit.fontawesome.com/01a78c12d6.js" crossorigin="anonymous"></script>
 </head>
