--- a/_includes/blogs.html
+++ b/_includes/blogs.html
@@ -1,6 +1,6 @@
 <div class="works mb-8 md:mb-16">
   <h2 class="font-bold text-xl pb-3 mb-3 border-b" data-sal="slide-up" data-sal-duration="500">
-    <a class="text-{{site.data.settings.color-scheme}}" href="/blog/">Blog</a>
+    <a href="/blog/">Blog</a>
   </h2>
   <div class="grid grid-cols-2 gap-6 py-3">
     {% for post in site.posts limit: 4 %}
