--- a/_includes/books.html
+++ b/_includes/books.html
@@ -1,6 +1,6 @@
 <div class="works mb-8 md:mb-16">
   <h2 class="font-bold text-xl pb-3 mb-3 border-b" data-sal="slide-up" data-sal-duration="500">
-    <a href="/books/">Books I've read</a>
+    <a href="/books/">Some of the books I've read</a>
   </h2>
   <div class="grid grid-cols-1 md:grid-cols-2 gap-6 py-3">
     {% for book in site.data.books limit: 6 %}
