--- a/_includes/books.html
+++ b/_includes/books.html
@@ -9,5 +9,6 @@
       <p class="text-center">by {{book.author}} </p>
     </div>
     {% endfor %}
+    <a href="/books/" class="m-auto">view more</a>
   </div>
 </div>
