--- a/_includes/works.html
+++ b/_includes/works.html
@@ -4,7 +4,7 @@
     data-sal="slide-up"
     data-sal-duration="500"
   >
-    <a href="/works/">My Work</a>
+    <a href="/work/">My Work</a>
   </h2>
   <div class="grid grid-cols-1 md:grid-cols-2 gap-6 py-3">
     {% for work in site.works limit: 4 %}
