--- a/_includes/books.html
+++ b/_includes/books.html
@@ -1,4 +1,4 @@
-<div class="works mb-8 md:mb-16">
+<div class="work mb-8 md:mb-16">
   <h2 class="font-bold text-xl pb-3 mb-3 border-b" data-sal="slide-up" data-sal-duration="500">
     <a href="/books/">Some of the books I've read</a>
   </h2>
