--- a/_includes/work.html
+++ b/_includes/work.html
@@ -1,4 +1,4 @@
-<div class="works mb-8 md:mb-16">
+<div class="work mb-8 md:mb-16">
   <h2
     class="font-bold text-xl pb-3 mb-3 border-b"
     data-sal="slide-up"
@@ -7,7 +7,7 @@
     <a href="/work/">My Work</a>
   </h2>
   <div class="grid grid-cols-1 md:grid-cols-2 gap-6 py-3">
-    {% for work in site.works limit: 4 %}
+    {% for work in site.work limit: 4 %}
 
     <a href="{{work.url}}">
       <div data-sal="slide-up" data-sal-duration="500">
