--- a/_includes/hobbies.html
+++ b/_includes/hobbies.html
@@ -1,4 +1,4 @@
-<div class="works mb-8 md:mb-16">
+<div class="work mb-8 md:mb-16">
   <h2
     class="font-bold text-xl pb-3 mb-3 border-b"
     data-sal="slide-up"
