--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,4 +1,4 @@
-<div class="works mb-8 md:mb-16">
+<div class="work mb-8 md:mb-16">
   <h2 class="font-bold text-xl pb-3 mb-3 border-b" data-sal="slide-up" data-sal-duration="500">
     <span class="text-{{site.data.settings.color-scheme}}">Skills</span>
   </h2>
