--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,7 +8,7 @@
   </a>
   <div class="description grid justify-items-center py-3 md:py-5">
     <a href="{{'/' | relative_url }}">
-      <h1 class="text-2xl font-bold text-white">{{site.data.sidebar.name}}</h1>
+      <h1 class="text-2xl font-bold no-underline text-white">{{site.data.sidebar.name}}</h1>
     </a>
     <div class="flex mb-3 md:mb-5">
       <h2 class="h-1 font-semibold text-white typed"></h2>
